--- a/.github/workflows/PROD-Signup-Tests.yml
+++ b/.github/workflows/PROD-Signup-Tests.yml
@@ -33,7 +33,7 @@ jobs:
           pip install -r requirements.txt
       
       - name: Install Playwright browsers
-        run: playwright install --with-deps ${{ matrix.browser }}
+        run: playwright install --with-deps
       
       - name: Run tests
         run: pytest -q --browser=${{ matrix.browser }}
